# church

./: Cargo.toml  FIXME.md  TODO.md  combs.ac  nats.ac
.circleci/: config.yml
assets/: bina.ac  bina.hs  bool.ch  church.vim  combs.ac  combs.ch  examples.ac  fact.ac  list.ac  list.ch  nat.ac  nats.ac  snippets.ch  test.ac
assets/refs/: funs.ch
front/: Cargo.toml
front/src/: compiler.rs  cu.rs  former.rs  grammar.lalrpop  lib.rs  parser.rs  scope.rs
refs/: funs.ch  types.ch
repl/: Cargo.toml
repl/src/: args.rs  command.rs  err.rs  lib.rs  main.rs  settings.rs
src/: enc.rs  lib.rs  main.rs  parser.lalrpop  parser.rs  parser.wop  repl.rs  scope.rs  straight.rs  term.rs
src/cci/: mod.rs  mode.rs  out.rs  parser.wop  runner.rs  scope.rs  ubody.rs  ui.rs
src/parser/: mod.rs  out.rs  parser.wop
src/repl/: cmds.rs  env.rs  io.rs  mod.rs  mode.rs  parser.rs  proc.rs
tests/: capture_substitution_bool_ops.ac  logic.ac  tabs.ac  white spaced.ac
