[package]
name = "church"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
repl = ["rustyline"]
default = ["repl"]

[dependencies]
logos = "0.14.0"
rustyline = { version = "13.0.0", optional  = true}
aho-corasick = "1.1.2"
rustc-hash = "1.1.0"
ctrlc = "3.4.4"
lalrpop-util = {version = "0.20.2", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.20.2"
